[package]
name = "chizmo"
version = "0.1.0"
edition = "2021"
keywords = ["chemistry"]
categories = ["science", "mathematics"]
license = "GPL-3.0-or-later"
repository = "https://github.com/spectre007/chizmo"
homepage = "https://github.com/spectre007/chizmo"
description = "Chemistry Gizmos - A toolbox for chemistry"

[dependencies]
periodic_table = "0.5.0"
nalgebra = "0.32.3"
phf = { version = "0.11.2", features = ["macros"] }
itertools = "0.11.0"
clap = { version = "4.4.3", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
